## Process this file with automake to produce Makefile.in
##
## Makefile.am:	automata files			uh, Fri Aug  2 1996
##
## This file is part of FIASCO («F»ractal «I»mage «A»nd «S»equence «CO»dec)
## Copyright (C) 1994-2000 Ullrich Hafner <hafner@bigfoot.de>
##
## $Date: 2000/06/19 18:44:38 $
## $Author: hafner $
## $Revision: 4.2 $
##

pkgdata_DATA =	b1.fco small.fco medium.fco large.fco	     

EXTRA_DIST = $(pkgdata_DATA)