## Process this file with automake to produce Makefile.in
##
## Makefile.am:	Documentation files
##
## This file is part of FIASCO («F»ractal «I»mage «A»nd «S»equence «CO»dec)
## Copyright (C) 1994-2000 Ullrich Hafner <hafner@bigfoot.de>
##
## $Date: 2000/10/28 17:39:32 $
## $Author: hafner $
## $Revision: 1.2 $
##

man_MANS =	fiasco_coder.3 \
		fiasco_decoder.3 \
		fiasco_decoder_new.3 \
		fiasco_decoder_delete.3 \
		fiasco_decoder_write_frame.3 \
		fiasco_decoder_get_frame.3 \
		fiasco_decoder_get_width.3 \
		fiasco_decoder_get_height.3 \
		fiasco_decoder_get_comment.3 \
		fiasco_decoder_get_title.3 \
		fiasco_decoder_is_color.3 \
		fiasco_decoder_get_framerate.3 \
		fiasco_decoder_get_length.3 \
		fiasco_c_options.3 \
		fiasco_c_options_new.3 \
		fiasco_c_options_delete.3 \
		fiasco_c_options_set_basisfile.3 \
		fiasco_c_options_set_chroma_quality.3 \
		fiasco_c_options_set_comment.3 \
		fiasco_c_options_set_frame_pattern.3 \
		fiasco_c_options_set_optimizations.3 \
		fiasco_c_options_set_prediction.3 \
		fiasco_c_options_set_progress_meter.3 \
		fiasco_c_options_set_quantization.3 \
		fiasco_c_options_set_smoothing.3 \
		fiasco_c_options_set_tiling.3 \
		fiasco_c_options_set_title.3 \
		fiasco_c_options_set_video_param.3 \
		fiasco_d_options.3 \
		fiasco_d_options_new.3 \
		fiasco_d_options_delete.3 \
		fiasco_d_options_set_4_2_0_format.3 \
		fiasco_d_options_set_magnification.3 \
		fiasco_d_options_set_smoothing.3 \
                fiasco_renderer.3 \
		fiasco_renderer_new.3 \
		fiasco_renderer_delete.3 \
		fiasco_renderer_render.3 \
		fiasco_image.3 \
		fiasco_image_new.3 \
		fiasco_image_delete.3 \
		fiasco_image_get_width.3 \
		fiasco_image_get_height.3 \
		fiasco_image_is_color.3 \
		fiasco_renderer_delete.3 \
		fiasco_renderer_render.3 \
		fiasco_get_error_message.3 \
		fiasco_set_verbosity.3 \
		fiasco_get_verbosity.3 \
		afiasco.1 bfiasco.1 cfiasco.1 dfiasco.1 efiasco.1 pnmpsnr.1

EXTRA_DIST =	README.LIB $(man_MANS)

