## Process this file with automake to produce Makefile.in
##
## Makefile.am:	WFA output routines
##
## This file is part of FIASCO ([F]ractal [I]mage [A]nd [S]equence [CO]dec)
## Copyright (C) 1994-2000 Ullrich Hafner <hafner@bigfoot.de>
##
## $Date: 2000/06/14 20:50:31 $
## $Author: hafner $
## $Revision: 5.1 $
##

noinst_LTLIBRARIES          = libfiasco-output.la
libfiasco_output_la_SOURCES = matrices.c mc.c nd.c tree.c weights.c write.c 
noinst_HEADERS		    = matrices.h mc.h nd.h tree.h weights.h write.h
EXTRA_DIST		    = MANIFEST		
INCLUDES		    = @INCLUDES@
